tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__fish_multiline_command_execution.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32m[32mCreated new worktree for [1mfish-multiline[22m from [1mmain[22m at [1m[TMPDIR]/repo.fish-multiline[39m[22m[39m
🔄 [36m[36mExecuting (--execute):[39m[39m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'line 1'[0m[2m; [0m[2m[34mecho[0m[2m [0m[2m[32m'line 2'[0m[2m; [0m[2m[34mecho[0m[2m [0m[2m[32m'line 3'[0m[2m[0m
line 1
line 2
line 3
