tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__fish_wrapper_preserves_progress_messages.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32mCreated new worktree for [1m[32mfish-bg[0m[32m from [1m[32mmain[0m[32m at [1m[32m[TMPDIR]/test-repo.fish-bg[0m[0m
🔄 [36mRunning post-start:[0m
[100m [0m  [1m[34mecho[0m [32m'fish background task'[0m[0m
